--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Implementação clone do https://www.tabnews.com.br/",
   "main": "index.js",
   "devDependencies": {
+    "jest": "^29.6.2",
     "prettier": "^3.5.3"
   },
   "scripts": {
     "dev": "next dev",
     "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write ."
+    "lint:fix": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "MIT",
